<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Steer</string>
   	<string name="logo">logo</string>
   	<string name="distance">Distance</string>
   	<string name="direction">Direction</string>
   	<string name="navigate">Navigate</string>
   	<string name="save">Save</string>
   	<string name="human">Human</string>
   	<string name="house">House</string>
   	<string name="manual">Manual</string>
   	<string name="navigation_distance_left">Distance Left:</string>
   	<string name="distance_calculated_distance">Distance:</string>
   	<string name="distance_calculated_distance_number">0.00</string>
   	<string name="navigation_distance_number">0.00</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_arrow">Arrow</string>
    <string name="gps_status_desc">Gps Status</string>

</resources>
