<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationMainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/arrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/navigation_arrow"
            android:src="@drawable/arrow_up" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top|center" >

        <ImageView
            android:id="@+id/gpsStatusImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gps_status_desc"
            android:src="@drawable/gps_off" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|center" >

        <TextView
            android:id="@+id/DistanceCalculatedDistanceNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/navigation_distance_left"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/navigationDistanceNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/navigation_distance_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</RelativeLayout>